--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,8 @@ repositories {
 }
 
 dependencies {
-//    compile 'com.epam.reportportal:client-java:3.0.0'
-//    compile 'com.epam.reportportal:commons-model:3.0.0'
-    compile 'com.github.reportportal:client-java:52ee665'
-    compile 'com.github.reportportal:commons-model:4ba7434'
+    compile 'com.epam.reportportal:client-java:4.0.0-BETA-1'
+    compile 'com.epam.reportportal:commons-model:4.0.0'
 
     compileOnly "ch.qos.logback:logback-classic:1.1.10"
 }
