prepare for the release

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ repositories {
 }
 
 dependencies {
-    compile 'com.epam.reportportal:client-java:4.0.0-BETA-1'
+    compile 'com.epam.reportportal:client-java:4.0.0'
     compile 'com.epam.reportportal:commons-model:4.0.0'
 
     compileOnly "ch.qos.logback:logback-classic:1.1.10"
