update with latest client java and model

--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,10 @@ repositories {
 }
 
 dependencies {
-    compile 'com.epam.reportportal:client-java:4.0.0'
-    compile 'com.epam.reportportal:commons-model:4.0.3'
+//    compile 'com.epam.reportportal:client-java:4.0.0'
+//    compile 'com.epam.reportportal:commons-model:4.0.3'
+    compile 'com.github.reportportal:commons-model:48e54ba'
+    compile 'com.github.reportportal:client-java:bbf173d4'
 
     compileOnly "ch.qos.logback:logback-classic:1.1.10"
 }
