Model and client dependencies update

--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,8 @@ repositories {
 dependencies {
 //    compile 'com.epam.reportportal:client-java:4.0.0'
 //    compile 'com.epam.reportportal:commons-model:4.0.3'
-    compile 'com.github.reportportal:commons-model:3e2ec1dbe'
-    compile 'com.github.reportportal:client-java:29934359'
+    compile 'com.github.reportportal:commons-model:5.0.0-BETA-6'
+    compile 'com.github.reportportal:client-java:52cd4405'
 
     compileOnly "ch.qos.logback:logback-classic:1.1.10"
 }
