--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,19 @@
 plugins {
-    id 'net.researchgate.release' version '2.4.1'
-    id "com.jfrog.bintray" version "1.7"
+    id 'net.researchgate.release' version '2.8.0'
+    id 'com.jfrog.bintray' version '1.8.4'
 }
 apply plugin: 'java'
-apply from: 'release.gradle'
 apply from: 'quality.gradle'
+apply from: 'https://raw.githubusercontent.com/reportportal/gradle-scripts/master/release-commons.gradle'
+
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
+
 description = 'EPAM Report portal. Logback Intergration'
 
+project.ext {
+    releaseMode = project.hasProperty('releaseMode')
+}
 
 repositories {
     jcenter()
@@ -18,14 +23,16 @@ repositories {
 }
 
 dependencies {
-//    compile 'com.epam.reportportal:client-java:4.0.0'
-//    compile 'com.epam.reportportal:commons-model:4.0.3'
-    compile 'com.github.reportportal:commons-model:5.0.0-BETA-6'
-    compile 'com.github.reportportal:client-java:52cd4405'
-
-    compileOnly "ch.qos.logback:logback-classic:1.1.10"
+    if (releaseMode) {
+        compile 'com.epam.reportportal:client-java:5.0.0-BETA-1'
+        compile 'com.epam.reportportal:commons-model:5.0.0-BETA-7'
+    } else {
+        compile 'com.github.reportportal:commons-model:9f72549'
+        compile 'com.github.reportportal:client-java:9c32e5c'
+    }
+    compileOnly 'ch.qos.logback:logback-classic:1.2.3'
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.5'
+wrapper {
+    gradleVersion = '5.4.1'
 }
