--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 plugins {
-    id 'net.researchgate.release' version '2.4.1'
-    id "com.jfrog.bintray" version "1.7"
+    id 'net.researchgate.release' version '2.8.0'
+    id "com.jfrog.bintray" version '1.8.4'
 }
 apply plugin: 'java'
 apply from: 'release.gradle'
 apply from: 'quality.gradle'
-sourceCompatibility = 1.6
-targetCompatibility = 1.6
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 description = 'EPAM Report portal. Logback Intergration'
 
 
@@ -18,12 +18,12 @@ repositories {
 }
 
 dependencies {
-    compile 'com.epam.reportportal:client-java:4.0.0'
-    compile 'com.epam.reportportal:commons-model:4.0.3'
+    compile 'com.epam.reportportal:client-java:4.0.18'
+    compile 'com.epam.reportportal:commons-model:4.2.0'
 
-    compileOnly "ch.qos.logback:logback-classic:1.1.10"
+    compileOnly "ch.qos.logback:logback-classic:1.2.3"
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.5'
+wrapper {
+    gradleVersion = '5.4.1'
 }
