--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,23 @@
 plugins {
-    id 'net.researchgate.release' version '2.8.0'
-    id "com.jfrog.bintray" version '1.8.4'
+    id 'java'
 }
-apply plugin: 'java'
-apply from: 'release.gradle'
-apply from: 'quality.gradle'
+
+apply from: 'https://raw.githubusercontent.com/reportportal/gradle-scripts/master/build-quality.gradle'
+apply from: 'https://raw.githubusercontent.com/reportportal/gradle-scripts/master/release-commons.gradle'
+
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
-description = 'EPAM Report portal. Logback Intergration'
 
+project.ext {
+    releaseMode = project.hasProperty('releaseMode')
+}
 
 repositories {
     jcenter()
-    mavenLocal()
-    maven { url "http://dl.bintray.com/epam/reportportal" }
-    maven { url "https://jitpack.io" }
+    maven { url 'http://dl.bintray.com/epam/reportportal' }
+    if (!releaseMode) {
+        maven { url 'https://jitpack.io' }
+    }
 }
 
 dependencies {
@@ -26,4 +29,10 @@ dependencies {
 
 wrapper {
     gradleVersion = '5.4.1'
+}
+
+release {
+    git {
+        requireBranch = 'v4-hotfix'
+    }
 }
