--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,20 @@
 plugins {
-    id 'java'
+    id 'net.researchgate.release' version '2.8.0'
+    id "com.jfrog.bintray" version '1.8.4'
 }
 
-apply from: 'https://raw.githubusercontent.com/reportportal/gradle-scripts/master/build-quality.gradle'
-apply from: 'https://raw.githubusercontent.com/reportportal/gradle-scripts/master/release-commons.gradle'
+apply plugin: 'java'
+apply from: 'release.gradle'
+apply from: 'quality.gradle'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-project.ext {
-    releaseMode = project.hasProperty('releaseMode')
-}
+sourceCompatibility = 1.6
+targetCompatibility = 1.6
 
 repositories {
     jcenter()
-    maven { url 'http://dl.bintray.com/epam/reportportal' }
-    if (!releaseMode) {
-        maven { url 'https://jitpack.io' }
-    }
+    mavenLocal()
+    maven { url "http://dl.bintray.com/epam/reportportal" }
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
