--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,28 @@
 plugins {
-    id 'net.researchgate.release' version '2.8.0'
-    id 'com.jfrog.bintray' version '1.8.4'
+    id 'java'
 }
-apply plugin: 'java'
-apply from: 'quality.gradle'
+
 apply from: 'https://raw.githubusercontent.com/reportportal/gradle-scripts/master/release-commons.gradle'
+apply from: 'https://raw.githubusercontent.com/reportportal/gradle-scripts/master/build-quality.gradle'
 
-sourceCompatibility = 1.6
-targetCompatibility = 1.6
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
-description = 'EPAM Report portal. Logback Intergration'
-
-project.ext {
-    releaseMode = project.hasProperty('releaseMode')
-}
+project.ext.releaseMode = project.hasProperty('releaseMode')
 
 repositories {
     jcenter()
     mavenLocal()
-    maven { url "http://dl.bintray.com/epam/reportportal" }
-    maven { url "https://jitpack.io" }
+    releaseMode ? maven { url "http://dl.bintray.com/epam/reportportal" } : maven { url "https://jitpack.io" }
 }
 
 dependencies {
     if (releaseMode) {
         compile 'com.epam.reportportal:client-java:5.0.0-BETA-4'
-        compile 'com.epam.reportportal:commons-model:5.0.0-BETA-11'
+        compile 'com.epam.reportportal:commons-model:5.0.0-RC-5'
     } else {
-        compile 'com.github.reportportal:client-java:9ede451'
-        compile 'com.github.reportportal:commons-model:2d10629'
+        compile 'com.github.reportportal:client-java:da8fb0f'
+        compile 'com.github.reportportal:commons-model:2f23f50'
     }
     compileOnly 'ch.qos.logback:logback-classic:1.2.3'
 }
