--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     testImplementation 'org.hamcrest:hamcrest-core:2.2'
     testImplementation "org.mockito:mockito-core:${project.mockito_version}"
     testImplementation "org.mockito:mockito-junit-jupiter:${project.mockito_version}"
-
+    testImplementation 'org.apache.commons:commons-io:1.3.2'
 }
 
 test {
