--- a/build.gradle
+++ b/build.gradle
@@ -37,9 +37,9 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.epam.reportportal:client-java:5.1.22'
+    implementation 'com.epam.reportportal:client-java:5.2.0'
     implementation 'com.epam.reportportal:commons-model:5.0.0'
-    implementation 'ch.qos.logback:logback-classic:1.3.8'
+    implementation 'ch.qos.logback:logback-classic:1.3.12'
 
     testImplementation 'com.epam.reportportal:agent-java-test-utils:0.0.2'
     testImplementation('org.awaitility:awaitility:4.0.2') {
@@ -54,6 +54,7 @@ dependencies {
     testImplementation "org.mockito:mockito-core:${project.mockito_version}"
     testImplementation "org.mockito:mockito-junit-jupiter:${project.mockito_version}"
     testImplementation 'org.apache.commons:commons-io:1.3.2'
+    testImplementation 'com.squareup.okhttp3:okhttp:4.12.0'
 }
 
 test {
