--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.epam.reportportal:client-java:5.2.4'
-    implementation 'ch.qos.logback:logback-classic:1.3.12'
+    compileOnly 'com.epam.reportportal:client-java:5.2.5'
+    compileOnly 'ch.qos.logback:logback-classic:1.3.12'
 
     testImplementation 'com.epam.reportportal:agent-java-test-utils:0.0.2'
     testImplementation('org.awaitility:awaitility:4.0.2') {
