--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,8 @@ version=5.2.2-SNAPSHOT
 description=EPAM Report portal. Logback Integration
 scripts_url=https://raw.githubusercontent.com/reportportal/gradle-scripts
 scripts_branch=master
+client_version=5.2.5
+logback_version=1.3.12
 junit_version=5.6.3
 junit_runner_version=1.6.3
 mockito_version=3.3.3
